# myproto

./: .gitignore  Cargo.toml
flake/: package.nix  shell.nix
src/: lib.rs  main.rs
