[package]
name = "myproto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bincode = "1.3.3"
bytes = "1.10.1"
futures = "0.3.31"
nom = "8.0.0"
rustls = "0.23.27"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
typetag = "0.2.20"
